# operating-system

./: MISSION.md  README.md  pyproject.toml
03-core-models/: 02-identity.md  04-evidence.md  dynamic.md  internal-models.md  ontology.md
03-core-models/00-foundation/: ontology.md
docs/: architecture.md  strategy.md
src/identity_os/: __init__.py  agents.py  identity.py  platform.py
src/identity_os.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_agents.py  test_identity.py  test_platform.py
